feat: add Error Prone + NullAway compile-time bug detection
Wires Error Prone into maven-compiler-plugin at the default check set,
bound directly to `mvn compile` rather than a diff-scoped or profile-bound
gate - the entire point is that a violation fails the compile an agent
already has to run, so it can't be skipped. Four noisy default checks are
demoted (EnumOrdinal, StringCaseLocaleUsage, MissingSummary,
ImmutableEnumChecker), each with a one-line reason in pom.xml.

NullAway rides the same compiler-plugin hook, scoped via an
annotated-packages ratchet starting on com.swiftfaze.veil.world and
com.swiftfaze.veil.entities (including its player/items/buildings/quests
subpackages) - chosen because a null tile or entity field is where a null
reference actually crashes the game. A hand-rolled @Nullable annotation
(com.swiftfaze.veil.annotations.Nullable) avoids a new dependency for
this half of the feature; NullAway matches @Nullable by simple class name
regardless of package.

Measured cost: a clean `mvn compile` went from ~11.7s to ~24.2s on the
machine this was measured on (~+12.5s), now documented in docs/testing.md
alongside the demoted-check table and how to add the next package to the
NullAway list.

Closes #199

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HYnK6xoVFfEo7CZmJrRx1L